# termgpt

./: README.md  pyproject.toml  setup.py
